fixed scrollbars on dashboard

--- a/PropertyPage/property.scss
+++ b/PropertyPage/property.scss
@@ -302,6 +302,7 @@ main {
 
 #amenity-parent-container {
     margin: 6em 0 0 0;
+
     #left-box-amenity {
         display: flex;
         flex-direction: column;
@@ -460,6 +461,7 @@ main {
                             border: none;
                             background-color: var(--main-color);
                             color: var(--global-font-color);
+                            text-wrap: nowrap;
                         }
 
                         .firstOrLastPage {
@@ -468,7 +470,7 @@ main {
                     }
 
                     .page-number-container {
-                        width: 55%;
+                        width: 80%;
                         display: flex;
                         justify-content: center;
                         gap: 2px;
@@ -490,7 +492,6 @@ main {
                     .next-page-container {
                         width: 22.25%;
                         display: flex;
-
                         justify-content: flex-end;
 
                         .next-page-button {
@@ -499,6 +500,7 @@ main {
                             border: none;
                             background-color: var(--main-color);
                             color: var(--global-font-color);
+                            text-wrap: nowrap;
                         }
                     }
                 }
@@ -813,6 +815,7 @@ main {
             }
         }
     }
+
     #ratingModal {
         #ratingModalInner {
             .rating-section-property {
@@ -842,6 +845,28 @@ main {
                     #reviewTextarea {
                         height: auto;
                         font-size: 1.5em;
+                    }
+                }
+            }
+        }
+    }
+
+    #comment-parent-container {
+        .boxes-container {
+            .left-box {
+                .comment-section {
+                    .comment-page-container {
+                        .previous-page-container{
+                            width: auto;
+                        }
+                        .page-number-container {
+                            .page-number {
+                                width: auto;
+                            }
+                        }
+                        .next-page-container{
+                            width: auto;
+                        }
                     }
                 }
             }
